--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^3.9.1",
     "date-fns": "^2.30.0",
     "fullcalendar": "^6.1.8",
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.10.1",
     "react-redux": "^7.2.4",
