--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,8 @@ python-editor = "==1.0.4"
 greenlet = "==1.1.0"
 Mako = "==1.1.4"
 requests = "*"
+newsapi-python = "*"
+boto3 = "*"
 
 [dev-packages]
 
