--- a/react-app/package.json
+++ b/react-app/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
